fix(model-store): fix gap between items in the model list

--- a/src/widgets/model-store/ui/ModelsList/ModelsList.module.scss
+++ b/src/widgets/model-store/ui/ModelsList/ModelsList.module.scss
@@ -18,7 +18,7 @@
 .list {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 8px;
 }
 
 .title {
